Fixed dark mode in building navigation component.

--- a/Front-end/src/app/building-navigation/building-navigation.component.scss
+++ b/Front-end/src/app/building-navigation/building-navigation.component.scss
@@ -22,7 +22,6 @@
   width: 100%;
   text-align: center;
   height: 20vh;
-  background-color: white;
   
   .mat-slider{
     width: calc(100% - 20px);
