--- a/Front-end/src/app/building-navigation/building-viewer/building-viewer.component.scss
+++ b/Front-end/src/app/building-navigation/building-viewer/building-viewer.component.scss
@@ -7,9 +7,7 @@
     top: 0px;
     right: 0px;
     margin: 5px;
-    background-color: white;
     padding: 10px;
     min-width: 100px;
     text-align: center;
-    border-radius: 4px;
   }
